--- a/index.html
+++ b/index.html
@@ -137,6 +137,20 @@
           </a>
         </li>
 
+        <!-- MODERN RIFF LIBRARY -->
+        <li>
+          <a class="item" href="modern-djent-riff-library.html">
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+              <rect x="4" y="6" width="4" height="12" rx="1.2"></rect>
+              <rect x="10" y="3" width="4" height="15" rx="1.2"></rect>
+              <rect x="16" y="8" width="4" height="9" rx="1.2"></rect>
+              <path d="M4 16 L8 14 L12 16 L16 13 L20 15" />
+            </svg>
+            <span class="title">Modern Djent Riff Library</span>
+            <span class="meta">Loop view + audio playback of curated djent riffs.</span>
+          </a>
+        </li>
+
       </ul>
     </nav>
 
