--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     </section>
 
     <nav aria-label="Library">
-      <h2 class="section-title" data-i18n="collection">Collection</h2>
-      <ul class="index">
+      <section class="collection-group">
+        <h2 class="section-title" data-i18n="section_books">Libros</h2>
+        <ul class="index">
 
         <!-- SCALES -->
         <li>
@@ -76,82 +77,90 @@
             <span class="meta" data-i18n="app_daily_meta">Each day, a chord — seen anew, to awaken inspiration.</span>
           </a>
         </li>
+        </ul>
+      </section>
 
-        <!-- BOUNCE GARDEN -->
-        <li>
-          <a class="item" href="the-bounce-garden.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5">
-              <circle cx="12" cy="12" r="9" />
-              <circle cx="8" cy="10" r="1.2" />
-              <circle cx="16" cy="14" r="1.2" />
-            </svg>
-            <span class="title" data-i18n="app_bounce_title">The Bounce Garden</span>
-            <span class="meta" data-i18n="app_bounce_meta">Where collisions sing — melodic orbits and rhythmic echoes within a circle.</span>
-          </a>
-        </li>
+      <section class="collection-group">
+        <h2 class="section-title" data-i18n="section_lab">Laboratorio</h2>
+        <p class="note" data-i18n="lab_note">Estas herramientas se encuentran en fase de experimentación.</p>
+        <ul class="index">
 
-        <!-- MODAL ARCHITECT -->
-        <li>
-          <a class="item" href="modal-architect.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="3" y="10" width="5" height="10" rx="0.8"></rect>
-              <rect x="10" y="6" width="4" height="14" rx="0.8"></rect>
-              <rect x="16" y="3" width="5" height="17" rx="0.8"></rect>
-              <path d="M3 10 L10 6 L16 3" />
-              <path d="M8 20 L14 20 L21 20" />
-            </svg>
-            <span class="title" data-i18n="app_modal_title">The Modal Architect</span>
-            <span class="meta" data-i18n="app_modal_meta">Design harmonic structures from scale geometry.</span>
-          </a>
-        </li>
+          <!-- BOUNCE GARDEN -->
+          <li>
+            <a class="item" href="the-bounce-garden.html">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5">
+                <circle cx="12" cy="12" r="9" />
+                <circle cx="8" cy="10" r="1.2" />
+                <circle cx="16" cy="14" r="1.2" />
+              </svg>
+              <span class="title" data-i18n="app_bounce_title">The Bounce Garden</span>
+              <span class="meta" data-i18n="app_bounce_meta">Where collisions sing — melodic orbits and rhythmic echoes within a circle.</span>
+            </a>
+          </li>
 
-        <!-- POLYRHYTHM FORGE -->
-        <li>
-          <a class="item" href="polyrhythm-forge.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="12" cy="12" r="8.5" />
-              <circle cx="12" cy="12" r="5.5" />
-              <circle cx="12" cy="12" r="2.5" />
-              <line x1="12" y1="12" x2="12" y2="3.5" />
-              <circle cx="12" cy="3.5" r="1.1" fill="currentColor" stroke="none"/>
-              <circle cx="19.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
-              <circle cx="12" cy="20.5" r="0.9" fill="currentColor" stroke="none"/>
-              <circle cx="4.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
-            </svg>
-            <span class="title" data-i18n="app_poly_title">The Polyrhythm Forge</span>
-            <span class="meta" data-i18n="app_poly_meta">Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.</span>
-          </a>
-        </li>
+          <!-- MODAL ARCHITECT -->
+          <li>
+            <a class="item" href="modal-architect.html">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="10" width="5" height="10" rx="0.8"></rect>
+                <rect x="10" y="6" width="4" height="14" rx="0.8"></rect>
+                <rect x="16" y="3" width="5" height="17" rx="0.8"></rect>
+                <path d="M3 10 L10 6 L16 3" />
+                <path d="M8 20 L14 20 L21 20" />
+              </svg>
+              <span class="title" data-i18n="app_modal_title">The Modal Architect</span>
+              <span class="meta" data-i18n="app_modal_meta">Design harmonic structures from scale geometry.</span>
+            </a>
+          </li>
 
-        <!-- RIFF FORGE -->
-        <li>
-          <a class="item" href="riff-forge.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
-              <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
-              <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
-              <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
-            </svg>
-            <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
-            <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
-          </a>
-        </li>
+          <!-- POLYRHYTHM FORGE -->
+          <li>
+            <a class="item" href="polyrhythm-forge.html">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="8.5" />
+                <circle cx="12" cy="12" r="5.5" />
+                <circle cx="12" cy="12" r="2.5" />
+                <line x1="12" y1="12" x2="12" y2="3.5" />
+                <circle cx="12" cy="3.5" r="1.1" fill="currentColor" stroke="none"/>
+                <circle cx="19.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+                <circle cx="12" cy="20.5" r="0.9" fill="currentColor" stroke="none"/>
+                <circle cx="4.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+              </svg>
+              <span class="title" data-i18n="app_poly_title">The Polyrhythm Forge</span>
+              <span class="meta" data-i18n="app_poly_meta">Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.</span>
+            </a>
+          </li>
 
-        <!-- MODERN RIFF LIBRARY -->
-        <li>
-          <a class="item" href="modern-djent-riff-library.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="4" y="6" width="4" height="12" rx="1.2"></rect>
-              <rect x="10" y="3" width="4" height="15" rx="1.2"></rect>
-              <rect x="16" y="8" width="4" height="9" rx="1.2"></rect>
-              <path d="M4 16 L8 14 L12 16 L16 13 L20 15" />
-            </svg>
-            <span class="title">Modern Djent Riff Library</span>
-            <span class="meta">Loop view + audio playback of curated djent riffs.</span>
-          </a>
-        </li>
+          <!-- RIFF FORGE -->
+          <li>
+            <a class="item" href="riff-forge.html">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
+                <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
+                <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
+                <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
+              </svg>
+              <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
+              <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
+            </a>
+          </li>
 
-      </ul>
+          <!-- MODERN RIFF LIBRARY -->
+          <li>
+            <a class="item" href="modern-djent-riff-library.html">
+              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="4" y="6" width="4" height="12" rx="1.2"></rect>
+                <rect x="10" y="3" width="4" height="15" rx="1.2"></rect>
+                <rect x="16" y="8" width="4" height="9" rx="1.2"></rect>
+                <path d="M4 16 L8 14 L12 16 L16 13 L20 15" />
+              </svg>
+              <span class="title">Modern Djent Riff Library</span>
+              <span class="meta">Loop view + audio playback of curated djent riffs.</span>
+            </a>
+          </li>
+
+        </ul>
+      </section>
     </nav>
 
     <footer>
@@ -179,7 +188,9 @@
         doc_description: "Re:sonance — An experimental library of sound, color, and quiet motion. Paths of vibration that awaken new forms of listening.",
         tagline: "A quiet selection for curious hands.",
         intro_blurb: "Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.",
-        collection: "Collection",
+        section_books: "Books",
+        section_lab: "Laboratory",
+        lab_note: "These tools are currently in an experimental phase.",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Paths that guide the hand toward unseen colors.",
         app_chords_title: "The Chords Book",
@@ -206,7 +217,9 @@
         doc_description: "Re:sonance — Una biblioteca experimental de sonido, color y movimiento sutil. Senderos de vibración que despiertan nuevas formas de escuchar.",
         tagline: "Una sutil selección para manos curiosas.",
         intro_blurb: "Re:sonance es una colección en crecimiento de herramientas musicales lúdicas, creada para encender nuevos rituales de escucha y exploraciones compartidas.",
-        collection: "Colección",
+        section_books: "Libros",
+        section_lab: "Laboratorio",
+        lab_note: "Estas herramientas se encuentran en fase de experimentación.",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Caminos que guían la mano hacia nuevos colores.",
         app_chords_title: "The Chords Book",
@@ -233,7 +246,9 @@
         doc_description: "Re:sonance — Uma biblioteca experimental de som, cor e movimento sutil. Caminhos de vibração que despertam novas formas de escutar.",
         tagline: "Uma seleção silenciosa para mãos curiosas.",
         intro_blurb: "Re:sonance é uma coleção crescente de ferramentas musicais lúdicas, criada para acender novos rituais de escuta e explorações compartilhadas.",
-        collection: "Coleção",
+        section_books: "Livros",
+        section_lab: "Laboratório",
+        lab_note: "Estas ferramentas estão em fase experimental.",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Caminhos que guiam a mão a cores invisíveis.",
         app_chords_title: "The Chords Book",
