Refresh desktop layout for home index

--- a/index.html
+++ b/index.html
@@ -8,158 +8,174 @@
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>☰</text></svg>">
   <link rel="stylesheet" href="assets/kindle.css">
 </head>
-<body>
+<body class="home">
   <main>
-    <header class="header">
-      <div>
-        <h1>Re:sonance</h1>
-        <p class="desc" data-i18n="tagline">A quiet selection for curious hands.</p>
-      </div>
-      <div class="header-controls">
-        <label class="visually-hidden" for="langSelect" data-i18n="lang_label">Language</label>
-        <select id="langSelect" class="lang-select" aria-label="Language" title="Language">
-          <option value="en">EN</option>
-          <option value="es">ES</option>
-          <option value="pt">PT</option>
-        </select>
-        <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
-      </div>
-    </header>
+    <section class="hero" aria-labelledby="siteTitle">
+      <div class="hero-surface">
+        <header class="header hero-header">
+          <div>
+            <h1 id="siteTitle">Re:sonance</h1>
+            <p class="desc" data-i18n="tagline">A quiet selection for curious hands.</p>
+          </div>
+          <div class="header-controls">
+            <label class="visually-hidden" for="langSelect" data-i18n="lang_label">Language</label>
+            <select id="langSelect" class="lang-select" aria-label="Language" title="Language">
+              <option value="en">EN</option>
+              <option value="es">ES</option>
+              <option value="pt">PT</option>
+            </select>
+            <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
+          </div>
+        </header>
 
-    <hr>
-
-    <section class="intro">
-      <p data-i18n="intro_blurb">Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.</p>
+        <div class="hero-intro">
+          <p data-i18n="intro_blurb">Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.</p>
+          <div class="hero-glance" aria-hidden="true">
+            <span data-i18n="section_books">Libros</span>
+            <span data-i18n="section_lab">Laboratorio</span>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <nav aria-label="Library">
+    <hr class="divider">
+
+    <nav class="library" aria-label="Library">
       <section class="collection-group">
-        <h2 class="section-title" data-i18n="section_books">Libros</h2>
-        <ul class="index">
+        <div class="collection-surface">
+          <div class="collection-header">
+            <h2 class="section-title" data-i18n="section_books">Libros</h2>
+          </div>
+          <ul class="index index-grid">
 
-        <!-- SCALES -->
-        <li>
-          <a class="item" href="the-scales-book.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
-              <circle cx="5" cy="16" r="1.6"></circle>
-              <circle cx="9.5" cy="13.2" r="1.6"></circle>
-              <circle cx="14" cy="10.6" r="1.6"></circle>
-              <circle cx="18.5" cy="8" r="1.6"></circle>
-            </svg>
-            <span class="title" data-i18n="app_scales_title">The Scales Book</span>
-            <span class="meta" data-i18n="app_scales_meta">Paths that guide the hand toward unseen colors.</span>
-          </a>
-        </li>
+            <!-- SCALES -->
+            <li>
+              <a class="item" href="the-scales-book.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
+                  <circle cx="5" cy="16" r="1.6"></circle>
+                  <circle cx="9.5" cy="13.2" r="1.6"></circle>
+                  <circle cx="14" cy="10.6" r="1.6"></circle>
+                  <circle cx="18.5" cy="8" r="1.6"></circle>
+                </svg>
+                <span class="title" data-i18n="app_scales_title">The Scales Book</span>
+                <span class="meta" data-i18n="app_scales_meta">Paths that guide the hand toward unseen colors.</span>
+              </a>
+            </li>
 
-        <!-- CHORDS -->
-        <li>
-          <a class="item" href="the-chords-book.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="6" cy="17" r="2.4"></circle>
-              <circle cx="18" cy="17" r="2.4"></circle>
-              <circle cx="12" cy="7" r="2.4"></circle>
-              <path d="M7.9 16.2 L10.4 8.8 M16.1 16.2 L13.6 8.8" />
-            </svg>
-            <span class="title" data-i18n="app_chords_title">The Chords Book</span>
-            <span class="meta" data-i18n="app_chords_meta">Forms of resonance across the strings.</span>
-          </a>
-        </li>
+            <!-- CHORDS -->
+            <li>
+              <a class="item" href="the-chords-book.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                  <circle cx="6" cy="17" r="2.4"></circle>
+                  <circle cx="18" cy="17" r="2.4"></circle>
+                  <circle cx="12" cy="7" r="2.4"></circle>
+                  <path d="M7.9 16.2 L10.4 8.8 M16.1 16.2 L13.6 8.8" />
+                </svg>
+                <span class="title" data-i18n="app_chords_title">The Chords Book</span>
+                <span class="meta" data-i18n="app_chords_meta">Forms of resonance across the strings.</span>
+              </a>
+            </li>
 
-        <!-- DAILY CHORD -->
-        <li>
-          <a class="item" href="the-daily-chord.html">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <rect x="3.5" y="6" width="17" height="13" rx="1.8"></rect>
-              <path d="M7 4 v3 M17 4 v3 M3.5 9 h17" />
-              <path d="M12 13.1 v-1.7 M12 13.1 l1.15 1.15 M12 13.1 l-1.15 1.15 M12 13.1 v1.7" />
-            </svg>
-            <span class="title" data-i18n="app_daily_title">The Daily Chord</span>
-            <span class="meta" data-i18n="app_daily_meta">Each day, a chord — seen anew, to awaken inspiration.</span>
-          </a>
-        </li>
-        </ul>
+            <!-- DAILY CHORD -->
+            <li>
+              <a class="item" href="the-daily-chord.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="3.5" y="6" width="17" height="13" rx="1.8"></rect>
+                  <path d="M7 4 v3 M17 4 v3 M3.5 9 h17" />
+                  <path d="M12 13.1 v-1.7 M12 13.1 l1.15 1.15 M12 13.1 l-1.15 1.15 M12 13.1 v1.7" />
+                </svg>
+                <span class="title" data-i18n="app_daily_title">The Daily Chord</span>
+                <span class="meta" data-i18n="app_daily_meta">Each day, a chord — seen anew, to awaken inspiration.</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="collection-group">
-        <h2 class="section-title" data-i18n="section_lab">Laboratorio</h2>
-        <p class="note" data-i18n="lab_note">Estas herramientas se encuentran en fase de experimentación.</p>
-        <ul class="index">
+        <div class="collection-surface">
+          <div class="collection-header">
+            <h2 class="section-title" data-i18n="section_lab">Laboratorio</h2>
+            <p class="note" data-i18n="lab_note">Estas herramientas se encuentran en fase de experimentación.</p>
+          </div>
+          <ul class="index index-grid">
 
-          <!-- BOUNCE GARDEN -->
-          <li>
-            <a class="item" href="the-bounce-garden.html">
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5">
-                <circle cx="12" cy="12" r="9" />
-                <circle cx="8" cy="10" r="1.2" />
-                <circle cx="16" cy="14" r="1.2" />
-              </svg>
-              <span class="title" data-i18n="app_bounce_title">The Bounce Garden</span>
-              <span class="meta" data-i18n="app_bounce_meta">Where collisions sing — melodic orbits and rhythmic echoes within a circle.</span>
-            </a>
-          </li>
+            <!-- BOUNCE GARDEN -->
+            <li>
+              <a class="item" href="the-bounce-garden.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5">
+                  <circle cx="12" cy="12" r="9" />
+                  <circle cx="8" cy="10" r="1.2" />
+                  <circle cx="16" cy="14" r="1.2" />
+                </svg>
+                <span class="title" data-i18n="app_bounce_title">The Bounce Garden</span>
+                <span class="meta" data-i18n="app_bounce_meta">Where collisions sing — melodic orbits and rhythmic echoes within a circle.</span>
+              </a>
+            </li>
 
-          <!-- MODAL ARCHITECT -->
-          <li>
-            <a class="item" href="modal-architect.html">
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="3" y="10" width="5" height="10" rx="0.8"></rect>
-                <rect x="10" y="6" width="4" height="14" rx="0.8"></rect>
-                <rect x="16" y="3" width="5" height="17" rx="0.8"></rect>
-                <path d="M3 10 L10 6 L16 3" />
-                <path d="M8 20 L14 20 L21 20" />
-              </svg>
-              <span class="title" data-i18n="app_modal_title">The Modal Architect</span>
-              <span class="meta" data-i18n="app_modal_meta">Design harmonic structures from scale geometry.</span>
-            </a>
-          </li>
+            <!-- MODAL ARCHITECT -->
+            <li>
+              <a class="item" href="modal-architect.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="3" y="10" width="5" height="10" rx="0.8"></rect>
+                  <rect x="10" y="6" width="4" height="14" rx="0.8"></rect>
+                  <rect x="16" y="3" width="5" height="17" rx="0.8"></rect>
+                  <path d="M3 10 L10 6 L16 3" />
+                  <path d="M8 20 L14 20 L21 20" />
+                </svg>
+                <span class="title" data-i18n="app_modal_title">The Modal Architect</span>
+                <span class="meta" data-i18n="app_modal_meta">Design harmonic structures from scale geometry.</span>
+              </a>
+            </li>
 
-          <!-- POLYRHYTHM FORGE -->
-          <li>
-            <a class="item" href="polyrhythm-forge.html">
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="8.5" />
-                <circle cx="12" cy="12" r="5.5" />
-                <circle cx="12" cy="12" r="2.5" />
-                <line x1="12" y1="12" x2="12" y2="3.5" />
-                <circle cx="12" cy="3.5" r="1.1" fill="currentColor" stroke="none"/>
-                <circle cx="19.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
-                <circle cx="12" cy="20.5" r="0.9" fill="currentColor" stroke="none"/>
-                <circle cx="4.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
-              </svg>
-              <span class="title" data-i18n="app_poly_title">The Polyrhythm Forge</span>
-              <span class="meta" data-i18n="app_poly_meta">Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.</span>
-            </a>
-          </li>
+            <!-- POLYRHYTHM FORGE -->
+            <li>
+              <a class="item" href="polyrhythm-forge.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                  <circle cx="12" cy="12" r="8.5" />
+                  <circle cx="12" cy="12" r="5.5" />
+                  <circle cx="12" cy="12" r="2.5" />
+                  <line x1="12" y1="12" x2="12" y2="3.5" />
+                  <circle cx="12" cy="3.5" r="1.1" fill="currentColor" stroke="none"/>
+                  <circle cx="19.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+                  <circle cx="12" cy="20.5" r="0.9" fill="currentColor" stroke="none"/>
+                  <circle cx="4.5" cy="12" r="0.9" fill="currentColor" stroke="none"/>
+                </svg>
+                <span class="title" data-i18n="app_poly_title">The Polyrhythm Forge</span>
+                <span class="meta" data-i18n="app_poly_meta">Concentric rings for polyrhythms & polymeters — Mesh-ish grooves, Euclidean accents, swing & pan.</span>
+              </a>
+            </li>
 
-          <!-- RIFF FORGE -->
-          <li>
-            <a class="item" href="riff-forge.html">
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
-                <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
-                <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
-                <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
-              </svg>
-              <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
-              <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
-            </a>
-          </li>
+            <!-- RIFF FORGE -->
+            <li>
+              <a class="item" href="riff-forge.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M5 4.5 C4 8.5 4 13.5 5 17.5 C5.6 19.9 8.1 21 10.4 20 L17 17.3 C19.1 16.4 20.5 14.3 20.5 12 C20.5 9.7 19.1 7.6 17 6.7 L10.4 4 C8.1 3 5.6 4.1 5 6.5 Z" />
+                  <line x1="9.5" y1="7.5" x2="14.5" y2="16.5" />
+                  <line x1="7.8" y1="9.2" x2="12.8" y2="18.2" />
+                  <line x1="11.2" y1="6.2" x2="16.2" y2="15.2" />
+                </svg>
+                <span class="title" data-i18n="app_riff_title">The Riff Forge</span>
+                <span class="meta" data-i18n="app_riff_meta">Heavy riff generator — tunings, djent leaning grids, syncopation & instant MIDI.</span>
+              </a>
+            </li>
 
-          <!-- MODERN RIFF LIBRARY -->
-          <li>
-            <a class="item" href="modern-djent-riff-library.html">
-              <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
-                <rect x="4" y="6" width="4" height="12" rx="1.2"></rect>
-                <rect x="10" y="3" width="4" height="15" rx="1.2"></rect>
-                <rect x="16" y="8" width="4" height="9" rx="1.2"></rect>
-                <path d="M4 16 L8 14 L12 16 L16 13 L20 15" />
-              </svg>
-              <span class="title">Modern Djent Riff Library</span>
-              <span class="meta">Loop view + audio playback of curated djent riffs.</span>
-            </a>
-          </li>
+            <!-- MODERN RIFF LIBRARY -->
+            <li>
+              <a class="item" href="modern-djent-riff-library.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="4" y="6" width="4" height="12" rx="1.2"></rect>
+                  <rect x="10" y="3" width="4" height="15" rx="1.2"></rect>
+                  <rect x="16" y="8" width="4" height="9" rx="1.2"></rect>
+                  <path d="M4 16 L8 14 L12 16 L16 13 L20 15" />
+                </svg>
+                <span class="title">Modern Djent Riff Library</span>
+                <span class="meta">Loop view + audio playback of curated djent riffs.</span>
+              </a>
+            </li>
 
-        </ul>
+          </ul>
+        </div>
       </section>
     </nav>
 
