Fix English defaults for library sections

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="hero-intro">
           <p data-i18n="intro_blurb">Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.</p>
           <div class="hero-glance" aria-hidden="true">
-            <span data-i18n="section_books">Libros</span>
-            <span data-i18n="section_lab">Laboratorio</span>
+            <span data-i18n="section_books">Books</span>
+            <span data-i18n="section_lab">Laboratory</span>
           </div>
         </div>
       </div>
@@ -44,7 +44,7 @@
       <section class="collection-group">
         <div class="collection-surface">
           <div class="collection-header">
-            <h2 class="section-title" data-i18n="section_books">Libros</h2>
+            <h2 class="section-title" data-i18n="section_books">Books</h2>
           </div>
           <ul class="index index-grid">
 
@@ -95,8 +95,8 @@
       <section class="collection-group">
         <div class="collection-surface">
           <div class="collection-header">
-            <h2 class="section-title" data-i18n="section_lab">Laboratorio</h2>
-            <p class="note" data-i18n="lab_note">Estas herramientas se encuentran en fase de experimentación.</p>
+            <h2 class="section-title" data-i18n="section_lab">Laboratory</h2>
+            <p class="note" data-i18n="lab_note">These tools are currently in an experimental phase.</p>
           </div>
           <ul class="index index-grid">
 
