--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -72,7 +72,7 @@
     <details class="panel" id="panel" open>
       <summary data-i18n="scales_panel_summary">Guitar setup</summary>
       <div class="panel-body">
-        <div class="controls" role="group" aria-label="Controls" data-i18n="scales_controls_aria" data-i18n-attr="aria-label">
+        <div class="controls" role="group" aria-label="Controls" data-i18n="scales_controls_aria" data-i18n-attr="aria-label" data-i18n-attr-only>
           <div class="row">
             <label for="stringCount" data-i18n="scales_control_strings">Strings</label>
             <input id="stringCount" type="number" min="3" max="10" value="6" style="width:86px" />
@@ -110,13 +110,13 @@
             <input id="volume" type="range" min="0" max="1" step="0.01" value="0.6" style="width:120px;">
           </div>
         </div>
-        <div id="tuningPanel" class="tuning" aria-label="Tuning editor" data-i18n="scales_tuning_aria" data-i18n-attr="aria-label"></div>
+        <div id="tuningPanel" class="tuning" aria-label="Tuning editor" data-i18n="scales_tuning_aria" data-i18n-attr="aria-label" data-i18n-attr-only></div>
       </div>
     </details>
 
     <section class="fretboard-wrap">
       <div id="fretboard" class="fretboard">
-        <div id="board" class="board" role="grid" aria-label="Fretboard" data-i18n="scales_fretboard_aria" data-i18n-attr="aria-label"></div>
+        <div id="board" class="board" role="grid" aria-label="Fretboard" data-i18n="scales_fretboard_aria" data-i18n-attr="aria-label" data-i18n-attr-only></div>
       </div>
     </section>
 
@@ -128,7 +128,7 @@
       <div id="pianoContainer" style="width:100%; overflow:hidden;"></div>
     </section>
 
-    <section class="support-note" id="supportInline" aria-label="Support this project" data-i18n="scales_support_label" data-i18n-attr="aria-label">
+    <section class="support-note" id="supportInline" aria-label="Support this project" data-i18n="scales_support_label" data-i18n-attr="aria-label" data-i18n-attr-only>
       <p style="margin:0">
         <span data-i18n="scales_support_intro">Did this page help you hear the fretboard differently?</span>
         <span data-i18n="scales_support_keep_prefix">If you want to keep </span>
@@ -140,7 +140,7 @@
         <span data-i18n="scales_support_note">It directly funds more tools and lessons. Thank you ✨</span>
       </p>
       <div class="actions">
-        <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer" aria-label="Buy me a coffee" data-i18n="scales_buyme_aria" data-i18n-attr="aria-label">
+        <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer" aria-label="Buy me a coffee" data-i18n="scales_buyme_aria" data-i18n-attr="aria-label" data-i18n-attr-only>
           <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
             <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
             <path d="M3 8h17"/><path d="M7 4h6"/>
@@ -155,7 +155,7 @@
 
     <footer>
       <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
-         aria-label="Support this library on Buy Me a Coffee" data-i18n="scales_footer_buyme_aria" data-i18n-attr="aria-label">
+         aria-label="Support this library on Buy Me a Coffee" data-i18n="scales_footer_buyme_aria" data-i18n-attr="aria-label" data-i18n-attr-only>
         <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
           <path d="M3 8h17"/>
