Add interactive chord decoder tool

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
               </a>
             </li>
 
+            <!-- CHORD DECODER -->
+            <li>
+              <a class="item" href="the-chord-decoder.html">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                  <rect x="4" y="5" width="6" height="14" rx="1.2"></rect>
+                  <rect x="14" y="3" width="6" height="18" rx="1.2"></rect>
+                  <path d="M4 9 L10 7 M10 17 L4 15" />
+                  <path d="M14 11 L20 13" />
+                </svg>
+                <span class="title" data-i18n="app_decoder_title">The Chord Decoder</span>
+                <span class="meta" data-i18n="app_decoder_meta">Mark notes on the neck and reveal every matching chord.</span>
+              </a>
+            </li>
+
             <!-- DAILY CHORD -->
             <li>
               <a class="item" href="the-daily-chord.html">
@@ -211,6 +225,8 @@
         app_scales_meta: "Paths that guide the hand toward unseen colors.",
         app_chords_title: "The Chords Book",
         app_chords_meta: "Forms of resonance across the strings.",
+        app_decoder_title: "The Chord Decoder",
+        app_decoder_meta: "Mark notes on the neck and reveal every matching chord.",
         app_daily_title: "The Daily Chord",
         app_daily_meta: "Each day, a chord — seen anew, to awaken inspiration.",
         app_bounce_title: "The Bounce Garden",
@@ -240,6 +256,8 @@
         app_scales_meta: "Caminos que guían la mano hacia nuevos colores.",
         app_chords_title: "The Chords Book",
         app_chords_meta: "Formas de resonancia a lo largo de las cuerdas.",
+        app_decoder_title: "The Chord Decoder",
+        app_decoder_meta: "Marca notas en el mástil y revela todos los acordes coincidentes.",
         app_daily_title: "The Daily Chord",
         app_daily_meta: "Cada día, un acorde, para despertar inspiración.",
         app_bounce_title: "The Bounce Garden",
@@ -269,6 +287,8 @@
         app_scales_meta: "Caminhos que guiam a mão a cores invisíveis.",
         app_chords_title: "The Chords Book",
         app_chords_meta: "Formas de ressonância através das cordas.",
+        app_decoder_title: "The Chord Decoder",
+        app_decoder_meta: "Marque notas no braço e revele todos os acordes correspondentes.",
         app_daily_title: "The Daily Chord",
         app_daily_meta: "A cada dia, um acorde — visto de novo, para despertar inspiração.",
         app_bounce_title: "The Bounce Garden",
