Move chord decoder to lab and fix fretboard rendering

--- a/the-chord-decoder.html
+++ b/the-chord-decoder.html
@@ -76,7 +76,7 @@
     <details class="panel" open>
       <summary data-i18n="decoder_panel_title">Guitar setup</summary>
       <div class="panel-body">
-        <div class="controls" role="group" aria-label="Controls" data-i18n="decoder_controls_aria" data-i18n-attr="aria-label">
+        <div class="controls" role="group" aria-label="Controls" data-i18n="decoder_controls_aria" data-i18n-attr="aria-label" data-i18n-attr-only>
           <div class="row">
             <label for="stringCount" data-i18n="decoder_strings_label">Strings</label>
             <input id="stringCount" type="number" min="3" max="8" value="6" style="width:86px;" />
@@ -97,7 +97,7 @@
       </div>
     </details>
 
-    <section class="fretboard-wrap" aria-label="Interactive fretboard" data-i18n="decoder_fretboard_aria" data-i18n-attr="aria-label">
+    <section class="fretboard-wrap" aria-label="Interactive fretboard" data-i18n="decoder_fretboard_aria" data-i18n-attr="aria-label" data-i18n-attr-only>
       <div class="fretboard">
         <div id="board" class="board" role="grid" aria-label="Interactive fretboard" data-i18n="decoder_fretboard_aria" data-i18n-attr="aria-label"></div>
       </div>
